adelante gran parte delpunto 3

--- a/flaskr/templates/blog/create.html
+++ b/flaskr/templates/blog/create.html
@@ -1,15 +1,11 @@
-{% extends 'base.html' %}
-
-{% block header %}
-  <h1>{% block title %}nuevo posteo{% endblock %}</h1>
-{% endblock %}
-
-{% block content %}
-  <form method="post">
-    <label for="title">titulo</label>
-    <input name="title" id="title" value="{{ request.form['title'] }}" required>
-    <label for="body">cuerpo</label>
-    <textarea name="body" id="body">{{ request.form['body'] }}</textarea>
-    <input type="submit" value="Save">
-  </form>
+{% extends 'base.html' %} {% block header %}
+<h1>{% block title %}nuevo posteo{% endblock %}</h1>
+{% endblock %} {% block content %}
+<form method="post">
+  <label for="title">titulo</label>
+  <input name="title" id="title" value="{{ request.form['title'] }}" required />
+  <label for="body">cuerpo</label>
+  <textarea name="body" id="body">{{ request.form['body'] }}</textarea>
+  <input type="submit" value="Guardar" />
+</form>
 {% endblock %}
