--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -7,7 +7,7 @@
   <label for="password">contraseña</label>
   <input type="password" name="password" id="password" required />
   <label for="password2">Verificar contraseña</label>
-  <input type="password" name="password" id="password2" required />
+  <input type="password" name="password2" id="password2" required />
   <input type="submit" value="registrarse" />
 </form>
 {% endblock %}
