--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -4,6 +4,8 @@
 <form method="post">
   <label for="username">usuario</label>
   <input name="username" id="username" required />
+  <label for="email">email</label>
+  <input type="email" id="email" name="email" required />
   <label for="password">contraseña</label>
   <input type="password" name="password" id="password" required />
   <label for="password2">Verificar contraseña</label>
